deploymentsecret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shark-deployment
  labels:
    app: sharksample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sharksample
  template:
    metadata:
      labels:
        app: sharksample
    spec:
      containers:
      - name: shark
        image: sharksample:v1
        ports:
        - containerPort: 8082

        volumeMounts:
        - name: db-secret-volume
          mountPath: /opt/secret

      volumes:
      - name: db-secret-volume
        secret:
          secretName: db-secret
