loadbalancerservice.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancerservice
spec:
  selector:
    app: sharksample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: LoadBalancer
